@@ -17,6 +17,7 @@ class CalendarRepository() {
         while (true) {
             println("getToday - Emitting day!")
             val now: Instant = Clock.System.now()
+//            val now: Instant = Instant.parse("2024-04-24T20:53Z")
             val modifiedDay: LocalDateTime = getDateMinusOffset(moment = now)
             val modifiedInstant: Instant = getInstantMinusOffset(moment = now)
             emit(
