@@ -1,37 +1,48 @@
 package presentation.screens.mainMenu
 
-import androidx.compose.foundation.layout.padding
+import androidx.compose.foundation.layout.Arrangement
+import androidx.compose.foundation.layout.Column
 import androidx.compose.runtime.Composable
+import androidx.compose.ui.Alignment
 import androidx.compose.ui.Modifier
 import androidx.compose.ui.graphics.Color
 import androidx.compose.ui.text.style.TextAlign
 import androidx.compose.ui.unit.dp
-import androidx.compose.ui.unit.sp
 import data.screens.mainMenu.MainMenuUIState
 import org.jetbrains.compose.resources.ExperimentalResourceApi
 import org.jetbrains.compose.resources.stringResource
 import presentation.resourceComposition.toOrdinalNumberString
 import presentation.resourceComposition.toResourceString
 import presentation.reusableUi.OutlinedText
+import presentation.style.MainTypography
 import zealotry.composeapp.generated.resources.Res
-import zealotry.composeapp.generated.resources.main_menu_title
+import zealotry.composeapp.generated.resources.day_of_season
 
 @OptIn(ExperimentalResourceApi::class)
 @Composable
-fun MainMenuTitle(uiState: MainMenuUIState) {
+fun MainMenuTitle(uiState: MainMenuUIState, modifier: Modifier = Modifier) {
     val dayName = uiState.festiveDay?.toResourceString() ?: uiState.dayOfWeek.toResourceString()
-    val ordinalDayOfSeason = uiState.dayOfSeason.toOrdinalNumberString()
-    val titleText = stringResource(
-        Res.string.main_menu_title,
-        dayName,
-        ordinalDayOfSeason,
+    val dayXOfSeasonY = stringResource(
+        Res.string.day_of_season,
+        uiState.dayOfSeason.toOrdinalNumberString(),
         uiState.currentSeason.toResourceString()
     )
-    return OutlinedText(
-        text = titleText,
-        textBorderColour = Color(0xFFFFFFFF),
-        modifier = Modifier.padding(20.dp),
-        fontSize = 24.sp,
-        textAlign = TextAlign.Center
-    )
+    return Column(
+        modifier = modifier,
+        horizontalAlignment = Alignment.CenterHorizontally,
+        verticalArrangement = Arrangement.spacedBy(8.dp),
+    ) {
+        OutlinedText(
+            text = dayXOfSeasonY,
+            textBorderColour = Color(0xFFFFFFFF),
+            textAlign = TextAlign.Center,
+            style = MainTypography().h5,
+        )
+        OutlinedText(
+            text= dayName,
+            textBorderColour = Color(0xFFFFFFFF),
+            textAlign = TextAlign.Center,
+            style = MainTypography().h4,
+        )
+    }
 }
