@@ -1,6 +1,12 @@
 This is just to motivate myself to improve a little bit every day :)
 
-Best: 28
+Best: 29
+
+21-04-2024
+Streak: 29
+Learned:
+Did:
+    -Finalise MainMenu title design and implementation
 
 20-04-2024
 Streak: 28
